site-flask-mustache/www/css/index.css
:root {
  --colour-white: #FFFFFF;
  --colour-gray: #7F7F7F;
  --colour-black: #000000;
  --svg-dark-bg-colour: #4F1784;
  --svg-dark-shadow-colour: #000000;
  --svg-light-bg-colour: #F1FFF1;
  --svg-light-shadow-colour: #000000;
}

@font-face {
  font-family: "Aegean-Regular";
  src: url("/fonts/Aegean.ttf") format("truetype");
}

body {
  text-align: center;
  background-color: transparent;
}

body > header nav {
  font-family: "Aegean-Regular", sans-serif;
}

body > main p {
  text-align: justify;
}

body > main ul,
body > main table {
  text-align: left;
}

body > footer {
  background-color: transparent;
  position: fixed;
  text-align: right;
  display: block;
}

body > footer button {
  display: block;
}

div.dropdown-menu {
  left: -10%;
}

.back-to-top {
  cursor: pointer;
  position: fixed;
  display: none;
}

body > header nav svg,
body > header nav a.dropdown-item svg {
  vertical-align: middle;
  margin-right: 0.25rem;
}

body > header nav div.dropdown-menu a.dropdown-item svg {
  vertical-align: middle;
}

p.aside_par {
  margin-left: auto;
  margin-right: auto;
  font-style: italic;
}


@media (min-width: 0px) {
  html {
    background-size: 150px 150px;
    background-repeat: repeat;
  }

  body > header nav {
    font-size: 250%;
  }

  body div.modal-body {
    font-size: 80%;
  }

  body > header nav {
    width: 100%;
  }

  body main {
    margin-bottom: 20vw;
  }

  body > footer {
    bottom: 2vw;
    right: 2vw;
  }

  main img.img_wide {
    width: 100%;
  }

  .back-to-top {
    bottom: 1vw;
    left: 5vw;
  }

  .back-to-top svg {
    width: 5vw;
    height: 5vw;
  }

  div.card-body {
    font-size: 3.5vw;
    padding-left: 5vw;
    padding-right: 5vw;
  }

  ul {
    padding-inline-start: 4vw;
  }

  div.modal-body table {
    font-size: 2.5vw;
    width: 100%;
  }
}


@media (min-width: 576px) {
  html {
    background-size: 300px 300px;
    background-repeat: repeat;
  }

  body > header nav {
    font-size: 250%;
  }

  body div.modal-body {
    font-size: 80%;
  }

  div.card-body {
    font-size: 2.25vw;
    padding-left: 5vw;
    padding-right: 5vw;
  }

  div.modal-body table {
    font-size: 0.75rem;
    width: 100%;
  }
}


@media (min-width: 768px) {
  html {
    background-size: 300px 300px;
    background-repeat: repeat;
  }

  body > header nav {
    font-size: 150%;
  }

  body div.modal-body {
    font-size: 80%;
  }
}


@media (min-width: 992px) {
  html {
    background-size: 300px 300px;
    background-repeat: repeat;
  }
  
  body > header nav {
    font-size: 125%;
  }

  body div.modal-body {
    font-size: 80%;
  }

  main img.img_wide {
    max-width: 800px;
  }

  a.back-to-top {
    opacity: 50%;
    width: 5vw;
    bottom: 1vw;
    left: calc(50% + 400px);
  }

  a.back-to-top:hover {
    opacity: 100%;
  }

  a.back-to-top svg {
    width: 90%;
  }

  div.page_intro {
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
    border-radius: 2vw 2vw 2vw 2vw;
    padding-bottom: 1vw;
  }

  div.card-body {
    font-size: 1rem;
    padding-left: 3vw;
    padding-right: 3vw;
  }

  ul {
    padding-inline-start: 2vw;
  }
}


@media (min-width: 1200px) {
}

